tests/baselines/reference/tsxGenericAttributesType7.errors.txt
tests/cases/conformance/jsx/file.tsx(5,13): error TS2322: Type 'U' is not assignable to type 'IntrinsicAttributes & U'.
  Type 'U' is not assignable to type 'IntrinsicAttributes'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    declare function Component<T>(props: T) : JSX.Element;
    const decorator = function <U>(props: U) {
        return <Component {...props} />;
                ~~~~~~~~~
!!! error TS2322: Type 'U' is not assignable to type 'IntrinsicAttributes & U'.
!!! error TS2322:   Type 'U' is not assignable to type 'IntrinsicAttributes'.
!!! related TS2797 tests/cases/conformance/jsx/file.tsx:4:29: This type parameter likely needs an `extends object` constraint.
    }
    
    const decorator1 = function <U extends {x: string}>(props: U) {
        return <Component {...props} x="hi"/>;
    }